--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,11 @@
 # CodeQL compilation caches
 .cache/
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+*.code-workspace
+
+# Local History for Visual Studio Code
+.history/
